@@ -82,7 +82,7 @@ def cli_search(args):
             match.year), **wrap_kw)
         authors = textwrap.fill("Authors: {:s}".format(
             match.get_authors(short=args.verb<2)), **wrap_kw)
-        keys = "\nbibkey: {:s}".format(match.key)
+        keys = "\nkey: {:s}".format(match.key)
         if args.verb > 0 and match.eprint is not None:
             keys = "\narXiv url: http://arxiv.org/abs/{:s}{:s}".format(
                 match.eprint, keys)
@@ -103,12 +103,12 @@ def cli_export(args):
 
 def cli_config(args):
     """Command-line interface for config call."""
-    if args.key is None:
+    if args.param is None:
         cm.display()
     elif args.value is None:
-        cm.help(args.key)
+        cm.help(args.param)
     else:
-        cm.set(args.key, args.value)
+        cm.set(args.param, args.value)
 
 
 def cli_bibtex(args):
@@ -185,13 +185,13 @@ def main():
     main_description = """
 BibTeX Database Management:
 ---------------------------
-  init        Initialize bibmanager database (from scratch).
+  init        Initialize the bibmanager database.
   merge       Merge a bibfile into the bibmanager database.
   edit        Edit the bibmanager database in a text editor.
   add         Add entries into the bibmanager database.
-  search      Search in database by author, year, and/or title.
-  export      Export the bibmanager database into a bibfile.
-  config      Set bibmanager configuration parameters.
+  search      Search entries in the bibmanager database.
+  export      Export the bibmanager database into a bib file.
+  config      Manage the bibmanager configuration parameters.
 
 LaTeX Management:
 ----------------
@@ -240,6 +240,7 @@ Description
         help="Path to an existing bibfile.")
     init.set_defaults(func=cli_init)
 
+
     merge_description = """
 {:s}Merge a bibfile into the bibmanager database.{:s}
 
@@ -266,8 +267,9 @@ Description
         "default: %(default)s)", choices=['old','new','ask'], default='old')
     merge.set_defaults(func=cli_merge)
 
+
     edit_description = """
-{:s}Edit the bibmanager database.{:s}
+{:s}Edit the bibmanager database in a text editor.{:s}
 
 Description
   This command let's you manually edit the bibmanager database,
@@ -282,6 +284,32 @@ Description
     edit = sp.add_parser('edit', description=edit_description,
         formatter_class=argparse.RawDescriptionHelpFormatter)
     edit.set_defaults(func=cli_edit)
+
+
+    add_description = """
+{:s}Add entries into the bibmanager database.{:s}
+
+Description
+  This command allows the user to manually add BibTeX entries into
+  the bibmanager database through the terminal prompt.
+
+  The optional 'take' argument defines the protocol for possible-
+  duplicate entries.  Either take the 'old' entry (database), take
+  the 'new' entry (bibfile), or 'ask' the user through the prompt
+  (displaying the alternatives).  bibmanager considers four fields
+  to check for duplicates: doi, isbn, adsurl, and eprint.
+
+  Additionally, bibmanager considers two more cases (always asking):
+  (1) new entry has duplicate key but different content, and
+  (2) new entry has duplicate title but different key.
+""".format(BOLD, END)
+    add = sp.add_parser('add', description=add_description,
+        formatter_class=argparse.RawDescriptionHelpFormatter)
+    add.add_argument("take", action="store", nargs='?', metavar='take',
+        help="Decision protocol for duplicates (choose: {%(choices)s}, "
+        "default: %(default)s)", choices=['old','new','ask'], default='new')
+    add.set_defaults(func=cli_add)
+
 
     search_description = """
 {:s}Search entries in the bibmanager database.{:s}
@@ -305,84 +333,63 @@ Description
   the title (see examples below).  Note these are case-insensitive.
 
   There are four levels of verbosity (see examples below):
-  - zero shows the title, year, first author, and bibkey;
+  - zero shows the title, year, first author, and key;
   - one adds the ADS and arXiv urls;
   - two adds the full list of authors;
   - and three displays the full BibTeX entry.
 
 Examples
   # Search by last name:
-  bibm search -a LastName
+  bibm search -a oliphant
   # Search by last name and initials (note blanks require one to use quotes):
-  bibm search -a 'LastName, F'
+  bibm search -a 'oliphant, t'
   # Search by first-author only:
-  bibm search -a '^LastName, F'
+  bibm search -a '^oliphant, t'
   # Search multiple authors:
-  bibm search -a 'LastName' 'NachName'
+  bibm search -a 'oliphant, t' 'jones, e'
+
+  # Seach by author, year, and title words/phrases:
+  bibm search -a 'oliphant, t' -y 2006 -t numpy
+  # Search multiple words/phrases in title:
+  bibm search -t 'HD 209458b' 'atmospheric circulation'
 
   # Search on specific year:
-  bibm search -a 'Author, I' -y 2017
-  # Search anything past the specified year:
-  bibm search -a 'Author, I' -y 2017-
-  # Search anything up to the specified year:
-  bibm search -a 'Author, I' -y -2017
+  bibm search -a 'cubillos, p' -y 2016
   # Search anything between the specified years:
-  bibm search -a 'Author, I' -y 2012-2017
+  bibm search -a 'cubillos, p' -y 2014-2016
+  # Search anything up to the specified year:
+  bibm search -a 'cubillos, p' -y -2016
+  # Search anything since the specified year:
+  bibm search -a 'cubillos, p' -y 2016-
 
-  # Seach by author and with keywords on title:
-  bibm search -a 'Author, I' -t 'HD 209458' 'HD 189733'
-
-  # Display title, year, first author, and bibkey:
-  bibm search -a 'Author, I'
+  # Display title, year, first author, and key:
+  bibm search -a 'Burbidge, E'
   # Display title, year, first author, and all keys/urls:
-  bibm search -a 'Author, I' -v
+  bibm search -a 'Burbidge, E' -v
   # Display title, year, author list, and all keys/urls:
-  bibm search -a 'Author, I' -vv
+  bibm search -a 'Burbidge, E' -vv
   # Display full BibTeX entry:
-  bibm search -a 'Author, I' -vvv
+  bibm search -a 'Burbidge, E' -vvv
 """.format(BOLD, END)
     search = sp.add_parser('search', description=search_description,
         formatter_class=argparse.RawDescriptionHelpFormatter)
-    search.add_argument('-a', '--author', action='store', nargs='*',
+    search.add_argument('-a', '--author', action='store', nargs='+',
         help='Search by author.')
     search.add_argument('-y', '--year', action='store',
         help='Restrict search to a year (e.g., -y 2018) or to a year range '
              '(e.g., -y 2018-2020).')
-    search.add_argument('-t', '--title', action='store', nargs='*',
+    search.add_argument('-t', '--title', action='store', nargs='+',
         help='Search by keywords in title.')
     search.add_argument('-v', '--verb', action='count', default=0,
         help='Set output verbosity.')
     search.set_defaults(func=cli_search)
 
-    add_description = """
-{:s}Add entries to the bibmanager database.{:s}
-
-Description
-  This command allows the user to manually add BibTeX entries into
-  the bibmanager database through the terminal prompt.
-
-  The optional 'take' arguments defines the protocol for possible-
-  duplicate entries.  Either take the 'old' entry (database), take
-  the 'new' entry (bibfile), or 'ask' the user through the prompt
-  (displaying the alternatives).  bibmanager considers four fields
-  to check for duplicates: doi, isbn, adsurl, and eprint.
-
-  Additionally, bibmanager considers two more cases (always asking):
-  (1) new entry has duplicate key but different content, and
-  (2) new entry has duplicate title but different key.
-""".format(BOLD, END)
-    add = sp.add_parser('add', description=add_description,
-        formatter_class=argparse.RawDescriptionHelpFormatter)
-    add.add_argument("take", action="store", nargs='?', metavar='take',
-        help="Decision protocol for duplicates (choose: {%(choices)s}, "
-        "default: %(default)s)", choices=['old','new','ask'], default='old')
-    add.set_defaults(func=cli_add)
 
     export_description = """
-{:s}Export bibmanager database to bib file.{:s}
+{:s}Export the bibmanager database into a bib file.{:s}
 
 Description
-  Export the entire bibmanager database into a bibliography file in
+  Export the entire bibmanager database into a bibliography file to a
   .bib or .bbl format according to the file extension of the
   'bibfile' argument (TBD: for the moment, only export to .bib).
 """.format(BOLD, END)
@@ -392,12 +399,13 @@ Description
         help="Path to an output bibfile.")
     export.set_defaults(func=cli_export)
 
+
     config_description = """
-{:s}Manage bibmanager configuration parameters.{:s}
+{:s}Manage the bibmanager configuration parameters.{:s}
 
 Description
   This command displays or sets the value of bibmanager config parameters.
-  There are four parameters/keys that can be set by the user:
+  There are five parameters that can be set by the user:
   - style       sets the color-syntax style of displayed BibTeX entries.
   - text_editor sets the text editor for 'bibm edit' calls.
   - paper       sets the default paper format for latex compilation.
@@ -407,9 +415,9 @@ Description
   The number of arguments determines the action of this command (see
   examples below):
   - with no arguments, display all available parameters and values.
-  - with the 'key' argument, display detailed info on the specified
+  - with the 'param' argument, display detailed info on the specified
     parameter and its current value.
-  - with both 'key' and 'value' arguments, set the value of the parameter.
+  - with both 'param' and 'value' arguments, set the value of the parameter.
 
 Examples
   # Display all config parameters and values:
@@ -421,11 +429,12 @@ Examples
 """.format(BOLD, END)
     config = sp.add_parser('config',  description=config_description,
         formatter_class=argparse.RawDescriptionHelpFormatter)
-    config.add_argument("key", action="store", nargs='?',
+    config.add_argument("param", action="store", nargs='?',
         help="A bibmanager config parameter.")
     config.add_argument("value", action="store", nargs='?',
-        help="Value for a bibmanager config key.")
+        help="Value for a bibmanager config parameter.")
     config.set_defaults(func=cli_config)
+
 
     # Latex Management:
     bibtex_description = """
@@ -448,6 +457,7 @@ Description
     bibtex.add_argument("bibfile", action="store", nargs='?',
         help="Path to an output bibfile.")
     bibtex.set_defaults(func=cli_bibtex)
+
 
     latex_description="""
 {:s}Compile a .tex file using the latex command.{:s}
@@ -475,6 +485,7 @@ Description
         default=cm.get('paper'))
     latex.set_defaults(func=cli_latex)
 
+
     pdflatex_description = """
 {:s}Compile a .tex file using the pdflatex command.{:s}
 
@@ -496,6 +507,7 @@ Description
     pdflatex.add_argument("texfile", action="store",
         help="Path to an existing texfile.")
     pdflatex.set_defaults(func=cli_pdflatex)
+
 
     # ADS Management:
     asearch_description = f"""
@@ -548,6 +560,7 @@ Examples
         help='ADS querry input.')
     asearch.set_defaults(func=cli_ads_search)
 
+
     ads_add_description = f"""
 {BOLD}Add entries from ADS by bibcode-key.{END}
 
@@ -584,6 +597,7 @@ Examples
         help='A pair specifying a valid ADS bibcode and its BibTeX key '
              'identifier assigned for the bibmanager database.')
     ads_add.set_defaults(func=cli_ads_add)
+
 
     ads_update_description = f"""
 {BOLD} Update bibmanager database crosschecking with ADS.{END}
